--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
     <div id="container">
     </div>
     <div id="cabecera">
-        Cabecera
+        Hyperblog
+        <span id="tagline">Tu blog de confianza</span>
     </div>
     <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
