--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El título del post</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
